--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 </div>
                 
                 <div class="text-center mb-12">
-                    <a href="#contact" class="inline-block btn-cta px-8 py-3 rounded-full text-lg font-semibold transition-all duration-300 transform hover:scale-105 shadow-lg" data-en="More Information" data-es="Más Información">
+                    <a href="contact.html" class="inline-block btn-cta px-8 py-3 rounded-full text-lg font-semibold transition-all duration-300 transform hover:scale-105 shadow-lg" data-en="More Information" data-es="Más Información">
                         More Information
                     </a>
                 </div>
